--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Hireup",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.17.0",
+    "axios": ">=0.19.0",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2"
